@@ -18,19 +18,16 @@ int main(int argc, char *argv[])
 
 	FILE *fpIn, *fpOut;
 	int binaryInput, binaryOutput;
-	int pairedEnd;
 	long long int counter;
 	char inputFileName[MAX_FILENAME_LENGTH]="\0";
 	char outputFileName[MAX_FILENAME_LENGTH]="\0";
 	RGMatches m;
 
-	if(argc == 4) {
+	if(argc == 3) {
 		strcpy(inputFileName, argv[1]);
 		binaryInput = atoi(argv[2]);
-		pairedEnd = atoi(argv[3]);
 
 		assert(TextInput==binaryInput || BinaryInput==binaryInput);
-		assert(SingleEnd==pairedEnd || PairedEnd==pairedEnd);
 
 		/* Creat output file name */
 		sprintf(outputFileName, "%s.converted",
@@ -61,14 +58,14 @@ int main(int argc, char *argv[])
 		counter = 0;
 		fprintf(stderr, "Currently on:\n0");
 		/* Read in each match */
-		while(EOF != RGMatchesRead(fpIn, &m, pairedEnd, binaryInput)) {
+		while(EOF != RGMatchesRead(fpIn, &m, PairedEndDoesNotMatter, binaryInput)) {
 			if(counter%BMFCONVERT_ROTATE_NUM==0) {
 				fprintf(stderr, "\r%lld",
 						counter);
 			}
 			counter++;
 			/* Print each match */
-			RGMatchesPrint(fpOut, &m, pairedEnd, binaryOutput);
+			RGMatchesPrint(fpOut, &m, binaryOutput);
 			RGMatchesFree(&m);
 		}
 		fprintf(stderr, "\r%lld\n",
@@ -84,7 +81,6 @@ int main(int argc, char *argv[])
 		fprintf(stderr, "Usage: %s [OPTIONS]\n", Name);
 		fprintf(stderr, "\t<bfast matches file name>\n");
 		fprintf(stderr, "\t<input type: 0-text 1-binary>\n");
-		fprintf(stderr, "\t<0-single-end 1-paired end>\n");
 	}
 	return 0;
 }
