@@ -73,7 +73,6 @@ bindexhist [OPTIONS]
 bmfconvert [OPTIONS]
 	<bfast matches file name>
 	<input type: 0-text 1-binary>
-	<0-single-end 1-paired end>
 
 bpairedenddist [OPTIONS]
 	<bfast matches file name>
@@ -93,8 +92,8 @@ breport [OPTIONS]
 btestindexes [OPTIONS]
 ******************************* Algorithm Options (no defaults) *******************************
 	-a	INT	algorithm
-	0: search for indexes
-	1: evaluate indexes
+		0: search for indexes
+		1: evaluate indexes
 	-r	INT	read length (for all) 
 	-S	INT	number of events to sample
 	-A	INT	space 0: nucleotide space 1: color space
