@@ -8,6 +8,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 Version 0.1.9
 * Updated bmf output to properly display when the maximum number
 of matches has been reached.
+* bmfconvert does not require paired end argument.
 
 Version 0.1.8
 * Updated to support Ns in the reads; will still ignore "."s.
